# Nexus-Nancy

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CODEX_PROVIDER_PLAN.md  PROVIDER_PLUGIN_PLAN.md  README.md  RELEASE_NOTES.md  TODO.md  pyproject.toml  test_models.py
.agents/: hand-off_instructions.txt  instructions.txt  relay_instructions.txt
.github/workflows/: ci.yml  gist-sync.yml  release.yml
docs/: MODELS_AND_AUTH.md  PLUGINS.md  conf.py  index.rst
extras/: README.md
extras/plugins/nancy-provider-codex/: README.md  pyproject.toml
extras/plugins/nancy-provider-codex/src/nancy_codex/: auth.py  plugin.py
extras/templates/plugin/: README.md  pyproject.toml
extras/templates/plugin/.github/workflows/: release.yml
extras/templates/plugin/src/nancy_TEMPLATE/: plugin.py
extras/templates/tool/: README.md  template.py
extras/tools/: README.md  chat-reloader.py
scripts/: bump_version.py
src/nexus_nancy/: __init__.py  app.py  auth.py  capabilities.py  cli.py  config.py  context.py  doctor.py  execution.py  llm.py  logging_text.py  provider.py  sandbox.py  session.py  token_count.py  tools.py  tui.css  tui.py
tests/: README.md  mock_llm_service.py  test_auth.py  test_capabilities.py  test_config.py  test_context.py  test_routes.py  test_tools.py
tmp_bootstrap_check/.agents/: instructions.txt  nnancy.yaml
